1.5.9.1.3 (yet another attempt at fixing sound on iOS (and a few other improvements))

--- a/css/ArcadeTheme.css
+++ b/css/ArcadeTheme.css
@@ -244,6 +244,10 @@ a:hover > img {
   box-sizing: inherit;
 }
 
+.alevelcard {
+  margin-bottom: 4em !important;
+}
+
 /* ANIMATIONS */
 
 @keyframes fadein {
